# appexecfwk_standard

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  appexecfwk.gni  bundle.json  hisysevent.yaml  mgit.info  ohos.build
interfaces/innerkits/appexecfwk_core/: BUILD.gn  appexecfwk_headers.gni
interfaces/innerkits/fmskit/: BUILD.gn
interfaces/innerkits/task_dispatcher/: BUILD.gn
services/bundlemgr/: BUILD.gn  appexecfwk_bundlemgr.gni  bundle.json  installs.cfg
services/bundlemgr/include/: account_helper.h  base_bundle_installer.h  base_extractor.h  bms_device_manager.h  bundle_data_mgr.h  bundle_data_storage.h  bundle_data_storage_database.h  bundle_data_storage_interface.h  bundle_exception_handler.h  bundle_extractor.h  bundle_installer.h  bundle_installer_host.h  bundle_installer_manager.h  bundle_mgr_host_impl.h  bundle_mgr_service.h  bundle_mgr_service_event_handler.h  bundle_parser.h  bundle_permission_mgr.h  bundle_permissions_changed_monitor.h  bundle_profile.h  bundle_promise.h  bundle_scanner.h  bundle_status_callback_death_recipient.h  bundle_stream_installer_host_impl.h  bundle_user_mgr_host_impl.h  bundle_util.h  bundle_verify_mgr.h  common_profile.h  distributed_data_storage.h  event_report.h  hidump_helper.h  inner_bundle_info.h  inner_bundle_user_info.h  inner_event_report.h  installd_client.h  kvstore_death_recipient_callback.h  module_profile.h  module_usage_data_storage.h  permission_changed_death_recipient.h  pre_install_bundle_info.h  (+5 more)
services/bundlemgr/src/: ability_manager_helper.cpp  account_helper.cpp  base_bundle_installer.cpp  base_extractor.cpp  bms_device_manager.cpp  bundle_clone_mgr.cpp  bundle_data_mgr.cpp  bundle_data_storage.cpp  bundle_data_storage_database.cpp  bundle_exception_handler.cpp  bundle_extractor.cpp  bundle_installer.cpp  bundle_installer_host.cpp  bundle_installer_manager.cpp  bundle_mgr_host_impl.cpp  bundle_mgr_service.cpp  bundle_mgr_service_event_handler.cpp  bundle_parser.cpp  bundle_permission_mgr.cpp  bundle_profile.cpp  bundle_scanner.cpp  bundle_status_callback_death_recipient.cpp  bundle_stream_installer_host_impl.cpp  bundle_user_mgr_host_impl.cpp  bundle_util.cpp  bundle_verify_mgr.cpp  distributed_data_storage.cpp  event_report.cpp  hidump_helper.cpp  inner_bundle_info.cpp  inner_bundle_user_info.cpp  inner_event_report.cpp  installd_client.cpp  kvstore_death_recipient_callback.cpp  module_profile.cpp  module_usage_data_storage.cpp  permission_changed_death_recipient.cpp  pre_install_bundle_info.cpp  preinstall_data_storage.cpp  status_receiver_proxy.cpp  (+4 more)
services/bundlemgr/test/: BUILD.gn
services/dbms/: BUILD.gn  bundle.json
services/dbms/include/: distributed_bms.h  distributed_bms_host.h  distributed_bms_interface.h  distributed_bms_proxy.h  image_buffer.h  image_compress.h
services/dbms/sa_profile/: 402.xml  BUILD.gn  distributedbms.cfg
services/dbms/src/: distributed_bms.cpp  distributed_bms_host.cpp  distributed_bms_proxy.cpp  image_buffer.cpp  image_compress.cpp
services/formmgr/: BUILD.gn
services/formmgr/include/: form_ability_connection.h  form_ams_helper.h  form_batch_delete_connection.h  form_bms_helper.h  form_cast_temp_connection.h  form_data_mgr.h  form_db_cache.h  form_db_info.h  form_delete_connection.h  form_event_notify_connection.h  form_host_record.h  form_item_info.h  form_mgr_adapter.h  form_mgr_service.h  form_msg_event_connection.h  form_record.h  form_refresh_connection.h  form_refresh_limiter.h  form_storage_mgr.h  form_supply_callback.h  form_sys_event_receiver.h  form_task_mgr.h  form_timer.h  form_timer_mgr.h  form_timer_option.h  form_util.h  kvstore_death_recipient_callback.h
services/formmgr/src/: form_ability_connection.cpp  form_acquire_connection.cpp  form_ams_helper.cpp  form_batch_delete_connection.cpp  form_bms_helper.cpp  form_cache_mgr.cpp  form_cast_temp_connection.cpp  form_data_mgr.cpp  form_db_cache.cpp  form_db_info.cpp  form_delete_connection.cpp  form_dump_mgr.cpp  form_event_notify_connection.cpp  form_host_callback.cpp  form_host_record.cpp  form_item_info.cpp  form_mgr_adapter.cpp  form_mgr_service.cpp  form_msg_event_connection.cpp  form_provider_mgr.cpp  form_refresh_connection.cpp  form_refresh_limiter.cpp  form_storage_mgr.cpp  form_supply_callback.cpp  form_sys_event_receiver.cpp  form_task_mgr.cpp  form_timer_mgr.cpp  form_util.cpp  kvstore_death_recipient_callback.cpp
services/formmgr/test/: BUILD.gn
test/benchmarktest/installer_proxy_test/: BUILD.gn  installer_proxy_test.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/AbilityInfoFromJson_fuzzer/: AbilityInfoFromJson_fuzzer.cpp  BUILD.gn
test/fuzztest/AbilityInfoMarshalling_fuzzer/: AbilityInfoMarshalling_fuzzer.cpp  BUILD.gn
test/fuzztest/AbilityInfoUnmarshalling_fuzzer/: AbilityInfoUnmarshalling_fuzzer.cpp  BUILD.gn
test/fuzztest/ApplicationInfoFromJson_fuzzer/: ApplicationInfoFromJson_fuzzer.cpp  BUILD.gn
test/fuzztest/ApplicationInfo_fuzzer/: ApplicationInfo_fuzzer.cpp  ApplicationInfo_fuzzer.h  BUILD.gn
test/fuzztest/BundleInfoFromJson_fuzzer/: BUILD.gn  BundleInfoFromJson_fuzzer.cpp
test/fuzztest/BundleInfo_fuzzer/: BUILD.gn  BundleInfo_fuzzer.cpp  BundleInfo_fuzzer.h
test/fuzztest/BundleSysCap_fuzzer/: BUILD.gn  BundleSysCap_fuzzer.cpp
test/fuzztest/CheckIsSystemAppByUid_fuzzer/: BUILD.gn  CheckIsSystemAppByUid_fuzzer.cpp  CheckIsSystemAppByUid_fuzzer.h
test/fuzztest/CommonEvent_fuzzer/: BUILD.gn  CommonEvent_fuzzer.cpp  CommonEvent_fuzzer.h
test/fuzztest/ElementName_fuzzer/: BUILD.gn  ElementName_fuzzer.cpp  ElementName_fuzzer.h
test/fuzztest/GetAccessibleAppCodePaths_fuzzer/: BUILD.gn  GetAccessibleAppCodePaths_fuzzer.cpp
test/fuzztest/GetApplicationInfos_fuzzer/: BUILD.gn  GetApplicationInfos_fuzzer.cpp  GetApplicationInfos_fuzzer.h
test/fuzztest/GetBundleInfos_fuzzer/: BUILD.gn  GetBundleInfos_fuzzer.cpp
test/fuzztest/InstallParamUnmarshalling_fuzzer/: BUILD.gn  InstallParamUnmarshalling_fuzzer.cpp  InstallParamUnmarshalling_fuzzer.h
tools/bm/: BUILD.gn  bundle.json  bundletool.gni
tools/bm/src/: bundle_command.cpp  (+2 more)
tools/zip/: BUILD.gn
(+1292 files in other folders)
