# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("dbms_target") {
  deps = [ ":libdbms" ]
}

ohos_shared_library("libdbms") {
  include_dirs = [ "include" ]

  sources = [
    "//foundation/appexecfwk/standard/services/dbms/src/distributed_bms.cpp",
    "//foundation/appexecfwk/standard/services/dbms/src/distributed_bms_host.cpp",
    "//foundation/appexecfwk/standard/services/dbms/src/distributed_bms_proxy.cpp",
  ]

  defines = [ "APP_LOG_TAG = \"BundleMgrService\"" ]

  deps = [ "//foundation/appexecfwk/standard/common:libappexecfwk_common" ]

  external_deps = [
    "ability_runtime:app_manager",
    "ability_runtime:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "resmgr_standard:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  part_name = "bundle_framework"
  subsystem_name = "appexecfwk"
}
