# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("dbms_target") {
  deps = [ ":libdbms" ]
}

ohos_shared_library("libdbms") {
  include_dirs = [
    "//foundation/aafwk/standard/frameworks/kits/appkit/native/app/include",
    "//foundation/aafwk/standard/services/common/include",
    "//foundation/appexecfwk/standard/services/dbms/include",
    "//base/global/resmgr_standard/interfaces/innerkits/include",
    "//base/global/i18n_standard/frameworks/intl/include",
    "//utils/system/safwk/native/include",
  ]

  sources = [
    "//foundation/appexecfwk/standard/services/dbms/src/distributed_bms.cpp",
    "//foundation/appexecfwk/standard/services/dbms/src/distributed_bms_host.cpp",
    "//foundation/appexecfwk/standard/services/dbms/src/distributed_bms_proxy.cpp",
  ]

  deps = [
    "//base/global/i18n_standard/frameworks/intl:intl_util",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
  ]

  external_deps = [
    "ability_runtime:app_manager",
    "ability_runtime:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  part_name = "appexecfwk_standard"
  subsystem_name = "appexecfwk"
}
