# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/appexecfwk/standard/appexecfwk.gni")

group("dbms_target") {
  deps = [ ":libdbms" ]
}

config("distributed_bms_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("libdbms") {
  sources = [
    "src/distributed_bms.cpp",
    "src/distributed_bms_host.cpp",
    "src/distributed_bms_proxy.cpp",
  ]

  defines = [ "APP_LOG_TAG = \"BundleMgrService\"" ]

  public_configs = [ ":distributed_bms_config" ]

  deps = [ "${common_path}:libappexecfwk_common" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:os_account_innerkits",
    "resmgr_standard:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "utils_base:utils",
  ]

  part_name = "distributed_bundle_framework"
  subsystem_name = "appexecfwk"
}
