# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../appexecfwk.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "AbilityInfoFromJson_fuzzer:AbilityInfoFromJsonFuzzTest",
    "AbilityInfoMarshalling_fuzzer:AbilityInfoMarshallingFuzzTest",
    "AbilityInfoUnmarshalling_fuzzer:AbilityInfoUnmarshallingFuzzTest",
    "ApplicationInfoFromJson_fuzzer:ApplicationInfoFromJsonFuzzTest",
    "ApplicationInfo_fuzzer:ApplicationInfoFuzzTest",
    "BundleInfoFromJson_fuzzer:BundleInfoFromJsonFuzzTest",
    "BundleInfo_fuzzer:BundleInfoFuzzTest",
    "BundleSysCap_fuzzer:BundleSysCapFuzzTest",
    "CheckIsSystemAppByUid_fuzzer:CheckIsSystemAppByUidFuzzTest",
    "CommonEvent_fuzzer:CommonEventFuzzTest",
    "ElementName_fuzzer:ElementNameFuzzTest",
    "GetAccessibleAppCodePaths_fuzzer:GetAccessibleAppCodePathsFuzzTest",
    "GetApplicationInfos_fuzzer:GetApplicationInfosFuzzTest",
    "GetBundleInfos_fuzzer:GetBundleInfosFuzzTest",
    "InstallParamUnmarshalling_fuzzer:InstallParamUnmarshallingFuzzTest",
    "ParseSysCap_fuzzer:ParseSysCapFuzzTest",
    "Parse_fuzzer:ParseFuzzTest",
    "ShortcutInfo_fuzzer:ShortcutInfoFuzzTest",
    "VerifyCallingPermission_fuzzer:VerifyCallingPermissionFuzzTest",
  ]
}
