# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/appexecfwk/standard/appexecfwk.gni")

config("zip_config") {
  include_dirs = [
    "include",
    "${aafwk_path}/common/task_dispatcher/include/dispatcher",
    "${aafwk_path}/common/task_dispatcher/include/task",
    "${aafwk_path}/common/task_dispatcher/include/threading",
    "${aafwk_path}/frameworks/kits/appkit/native/app/include/task",
    "${aafwk_path}/frameworks/kits/appkit/native/app/include",
    "//third_party/libuv/include",
    "//third_party/node/src",
    "//third_party/zlib",
  ]

  defines = [
    "APP_LOG_TAG = \"BundleMgrService\"",
    "LOG_DOMAIN = 0xD001120",
  ]
}

ohos_shared_library("zlib") {
  public_configs = [ ":zip_config" ]

  sources = [
    "kits/napi/napi_zlib.cpp",
    "kits/napi/napi_zlib_common.cpp",
    "kits/napi/native_module.cpp",
    "src/file_path.cpp",
    "src/zip.cpp",
    "src/zip_internal.cpp",
    "src/zip_reader.cpp",
    "src/zip_utils.cpp",
    "src/zip_writer.cpp",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${common_path}:libappexecfwk_common",
    "//foundation/aafwk/standard/common/task_dispatcher:appkit_dispatcher_td",
    "//third_party/libuv:uv_static",
    "//third_party/zlib:libz",
  ]

  external_deps = [
    "ability_runtime:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "utils_base:utils",
  ]

  install_enable = true
  subsystem_name = "appexecfwk"
  part_name = "bundle_framework"
  relative_install_dir = "module"
}

group("tools_zip") {
  deps = [ ":zlib" ]
}
