# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

appexecfwk_headers = {
  header_files = [
    "bundlemgr/bundle_installer_interface.h",
    "bundlemgr/bundle_mgr_interface.h",
    "bundlemgr/bundle_status_callback_interface.h",
    "bundlemgr/clean_cache_callback_interface.h",
    "bundlemgr/status_receiver_interface.h",
    "bundlemgr/on_permission_changed_callback_interface.h",
  ]

  header_base = "interfaces/innerkits/appexecfwk_core/include"
}
