# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "//foundation/appexecfwk/standard"

config("fmskit_config") {
  defines = [
    "APP_LOG_TAG = \"FmskitNative\"",
    "LOG_DOMAIN = 0xD001151",
  ]
}
config("fmskit_public_config") {
  include_dirs = [
    "$SUBSYSTEM_DIR/common/log/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/fmskit/native/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/formmgr",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include",
    "//utils/system/safwk/native/include",
  ]
}

# build so
ohos_shared_library("fmskit_native") {
  configs = [ ":fmskit_config" ]
  public_configs = [ ":fmskit_public_config" ]
  sources = [
    "$SUBSYSTEM_DIR/interfaces/innerkits/fmskit/native/src/form_host_client.cpp",
    "$SUBSYSTEM_DIR/interfaces/innerkits/fmskit/native/src/form_mgr.cpp",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  deps = [
    "$SUBSYSTEM_DIR/common:libappexecfwk_common",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_L2:samgr_proxy",
  ]

  subsystem_name = "appexecfwk"
  part_name = "appexecfwk_standard"
}
